// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorGeometry component test set currentSceneTreeNode test change geometry test snapshot test hide select geometry group widget 1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="geometry-select"
  >
    Cube
    <span
      className="select-title"
      onClick={[Function]}
    >
      select
    </span>
  </div>
</article>
`;

exports[`MainEditorGeometry component test set currentSceneTreeNode test change geometry test snapshot test show select geometry group widget 1`] = `
<article
  className="wonder-inspector-geometry"
>
  <div
    className="geometry-select"
  >
    Cube
    <span
      className="select-title"
      onClick={[Function]}
    >
      select
    </span>
  </div>
  <div
    className="select-component-content"
  >
    <div
      className="select-component-item"
    >
      <div
        className="item-header"
      >
        Geometry
      </div>
      <div
        className="item-content item-active"
        onClick={[Function]}
      >
        Cube
      </div>
      <div
        className="item-content"
        onClick={[Function]}
      >
        Sphere
      </div>
    </div>
    <div
      className="select-component-bg"
      onClick={[Function]}
    />
  </div>
</article>
`;
